# Relinow

./: .gitignore  CLAUDE.md  LICENSE  PROTOCOL.md  README.md  TEST_MATRIX.md  TEST_MATRIX.yaml  TEST_VECTORS.yaml  eim_config.toml
core/: CMakeLists.txt
core/include/: relinow_espnow.h  relinow_packet.h  relinow_reliable.h  relinow_state.h
core/src/: relinow_espnow.c  relinow_packet.c  relinow_reliable.c  relinow_state.c
examples/: README.md
examples/esp32_a/: CMakeLists.txt
examples/esp32_a/main/: main.c
examples/esp32_b/: CMakeLists.txt
examples/esp32_b/main/: main.c
tests/: CMakeLists.txt  README.md
tests/include/: fixture_loader.h
tests/src/: fixture_loader.c  test_matrix_loader.c  test_packet_codec.c  test_reliable_mvp.c  test_reliable_state.c  test_state_core.c  test_vector_loader.c
tools/: build_fixtures.py
